# django_ory_auth

./: .gitignore  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: tox-tests.yml
django_ory_auth/: apps.py  backend.py  context.py  middleware.py  urls.py  views.py
ory_auth/: apps.py  middleware.py
tests/: settings.py  test_ory_auth.py  test_ory_auth_backend.py  test_ory_context.py  test_ory_middleware.py
tests/cassettes/: test_authenticated.yaml  test_context_processor_authenticated.yaml  test_context_processor_unauthenticated.yaml  test_middleware_authenticated.yaml  test_middleware_unauthenticated.yaml  test_unauthenticated.yaml
