[tool.poetry]
name = "ory_django"
version = "0.1.0"
description = "A django package to enable integration with Ory Cloud"
authors = ["Andrew Minkin <minkin.andrew@gmail.com>"]
license = "LICENSE"

[tool.poetry.dependencies]
python = ">=3.7"
requests = "^2.27.1"
Django = ">3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
