[tool.poetry]
name = "django_ory_auth"
version = "0.1.3"
description = "A django package to enable integration with Ory Cloud"
authors = ["Andrew Minkin <minkin.andrew@gmail.com>"]
license = "Apache 2"
packages = [
    {include="django_ory_auth"}
]
readme = "README.md"
keywords = ["django", "ory cloud", "auth"]
repository = "https://github.com/gen1us2k/django_ory_auth"
classifiers=[
    'Programming Language :: Python :: 3',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Framework :: Django :: 3.0',
    'Framework :: Django :: 4',
    'Framework :: Django CMS',
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "*"
Django = ">3"
urllib3 = "^1.26.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-vcr = "^1.0.2"
tox = "^3.25.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
